Update to accept estimated time on gitlab issue

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,13 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.5</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20190722</version>
+        </dependency>
+
     </dependencies>
 
 </project>
