--- a/pom.xml
+++ b/pom.xml
@@ -5,34 +5,36 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.github.gaboso</groupId>
-    <artifactId>IssueImportManager</artifactId>
-    <version>0.2.0</version>
+    <artifactId>Jaimin.io</artifactId>
+    <version>1.0.0</version>
 
     <organization>
         <name>com.github.gaboso</name>
-        <url>https://github.com/Gaboso/IssueImportManager</url>
+        <url>https://github.com/Gaboso/Jaimin.io</url>
     </organization>
 
     <scm>
-        <connection>
-            scm:git:git://github.com/Gaboso/IssueImportManager.git
-        </connection>
-        <url>
-            https://github.com/Gaboso/IssueImportManager
-        </url>
+        <connection>scm:git:git://github.com/Gaboso/Jaimin.io.git</connection>
+        <url>https://github.com/Gaboso/Jaimin.io</url>
     </scm>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
+        <log.version>2.13.3</log.version>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>${log.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log.version}</version>
         </dependency>
 
         <dependency>
